--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "eplain.doc.tar.xz:"	e1208db8446dc591512e306780b6beb6d4d48111
-  "eplain.source.tar.xz:"	d2f0342b4e7c7ee3c6205647dff63ce93aad7878
-  "eplain.tar.xz:"	33bd29402f303edbaaa0e0bbc51fd21f2e9d8ab4
+  eplain.doc.tar.xz: e1208db8446dc591512e306780b6beb6d4d48111
+  eplain.source.tar.xz: d2f0342b4e7c7ee3c6205647dff63ce93aad7878
+  eplain.tar.xz: 33bd29402f303edbaaa0e0bbc51fd21f2e9d8ab4
