--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  eplain.doc.tar.xz: 1812c8ebe4f307f254148470dcf6682b70afc12b
-  eplain.source.tar.xz: fa403d0da60843e1ca0357f1f531f7f977d1fb85
-  eplain.tar.xz: 8123ba6a0da4e7f7158b176106f87fd73cf5b626
+  eplain.doc.r64721.tar.xz: fb0b61a1b316688608aaa48444c1c423915ede64
+  eplain.r64721.tar.xz: bead5ad656dd6fe651a213ca92dd19765dbf5642
+  eplain.source.r64721.tar.xz: a80c0b40fb80bac5ec9c84f8c264458e41f0aa69
